# ascii-horror-game

./: .gitignore  API_REFERENCE.md  ASCII_TEXT_FEATURE.md  CMakeLists.txt  DEMO.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TESTING.md  USAGE_GUIDE.md  example_gradient.ppm  test.py  test_image.ppm
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  example_full  example_image  example_panels  example_procedural  example_text  example_video
cmake/: FetchOpenCV.cmake
examples/: example_full.cpp  example_image.cpp  example_panels.cpp  example_procedural.cpp  example_text.cpp  example_video.cpp
fonts/Fleur_De_Leah/: FleurDeLeah-Regular.txt  requirements.txt  ttf-confvert.py
include/: ASCIIImage.h  ASCIILetter.h  ASCIIParagraph.h  ASCIIVideo.h  ASCIIWord.h  Panel.h  PanelManager.h  TerminalUtils.h  ascii_converter.h  ascii_generator.hpp  ascii_image.hpp  color_utils.hpp  game_menu.hpp  image.hpp  image_processor.h
include/ascii_image/: ascii_generator.hpp  ascii_image.hpp
include/ftxui_ansi/: ansi_paragraph.hpp  ansi_text.hpp
src/: ASCIIImage.cpp  ASCIILetter.cpp  ASCIIParagraph.cpp  ASCIIVideo.cpp  ASCIIWord.cpp  Panel.cpp  PanelManager.cpp  TerminalUtils.cpp  ansi_text.cpp  ascii_converter.cpp  ascii_generator.cpp  ascii_image.cpp  color_utils.cpp  game_menu.cpp  image_processor.cpp  main.cpp  menu_test.cpp
src/ascii_image/: ascii_generator.cpp
src/ftxui_ansi/: ansi_test.cpp  ansi_text.cpp
